﻿2009.08.24
	- added support for java console application
2009.08.28
	- added jsc logo as branding for windows forms everywhere javascript solution
2009.09.02
	- fixed assumption so that the entrypoint method may be parameteless.
2009.09.03
	- jar files will be genererated to web\bin as planned
2009.09.05
	- java bat file now accepts arguments
	- arguments are now parsed via lib\ScriptCoreLib.Reflection.Options.dll
	- added custom assembly load logic
2009.09.06
	- java staging directory can now be given as a parameter
2009.09.16
	- javac will now reference all jar files in web/bin
2009.09.23
	- visual basic generated .My namespaces are excluded for now
2009.09.24
	- Commands shall be defined in their namespace
2009.09.25
	- Resolving to assemblies which are already loaded will not fail anymore
2009.09.28
	- javapath parameter added to ExtendWindowsFormsEverywhere 
	- ExtendWindowsFormsEverywhere now supports javascript and java
2009.09.29
	- preparing to add ExtendToAvalonEverywhere command
2009.09.30
	- ExtendToAvalonEverywhere now builds javascript version and actionscript version